--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -292,7 +292,8 @@ input[type=file] {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 10px;
+  border-radius: 15px;
+  overflow: hidden;
   //border: 2px solid transparent;
   &:hover{
     background: #00000029;
@@ -332,15 +333,7 @@ input[type=file] {
   width: 100%;
   gap: 5px;
   .reactions{
-    position: absolute;
-    bottom: 0px;
-    font-size: 0.8rem;
-    display: flex;
-    flex-direction: row;
-    background: #7f7f7fc2;
-    min-width: 15px;
-    border-radius: 10px;
-    right: 0;
+    left: 0;
   }
   .time{
     left: 110%;
@@ -376,15 +369,7 @@ input[type=file] {
   width: 100%;
   gap: 5px;
   .reactions{
-    position: absolute;
-    bottom: 0px;
-    font-size: 0.8rem;
-    display: flex;
-    flex-direction: row;
-    background: #7f7f7fc2;
-    min-width: 15px;
-    border-radius: 10px;
-    right: 20px;
+    right: 0;
   }
   .time{
     right: 110%;
@@ -392,11 +377,17 @@ input[type=file] {
 }
 
 .reactions{
-  max-width: 35px;
-  .emo{
-    overflow: hidden;
-    padding: 0 5px;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: #192838;
+  position: absolute;
+  border-radius: 10px;
+  right: 0;
+  font-size: 0.8rem;
+  width: max-content;
+  padding: 0 3px;
 }
 
 
@@ -426,10 +417,22 @@ input[type=file] {
 
 .image-message{
   max-width: 50vw;
-  border-radius: 10px;
   max-height: 300px;
   color: white;
   min-width: 100px;
+}
+
+.first{
+  .object{
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+  }
+}
+.last{
+  .object{
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+  }
 }
 
 .lightbox{
@@ -593,10 +596,6 @@ scrollbar-width: none;  /* Firefox */
   gap: 2px;
 }
 
-.reactions{
-  font-size: 0.8rem;
-}
-
 #messages{
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
@@ -693,7 +692,7 @@ scrollbar-width: none;  /* Firefox */
         left: 120%;
       }
       .reactions{
-        right: 0;
+        left: 0;
        }
     }
     .my__message__body{
@@ -742,6 +741,10 @@ scrollbar-width: none;  /* Firefox */
   &:hover{
     cursor: pointer;
   }
+}
+
+.op{
+  font-size: 0.7rem;
 }
 
 .reactionContainer{
@@ -799,20 +802,6 @@ scrollbar-width: none;  /* Firefox */
     display: flex;
     flex-direction: column;
     list-style-type: none;
-  }
-}
-
-.message, .my__message {
-  .reactions{
-    position: absolute;
-    bottom: 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background: #7f7f7fc2;
-    min-width: 15px;
-    border-radius: 10px;
   }
 }
 
