--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@
 :root {
   --primary-dark: #111d2a;
   --foreground-dark: #e1eeff;
-  --secondary-dark: #4598ff;
+  --secondary-dark: #2585fd;
   --focus--dark: #192838bd;
   --red: #cd4040;
   --secondary: var(--secondary-dark);
@@ -403,7 +403,8 @@ input[type=file] {
 }
 
 .image .time {
-  left: 110%;
+  left: 100%;
+  padding-left: 25px;
 }
 
 .image__body {
@@ -445,7 +446,8 @@ input[type=file] {
 }
 
 .image__body .main-image .time {
-  right: 110%;
+  right: 100%;
+  padding-right: 25px;
 }
 
 .my__image {
@@ -471,7 +473,8 @@ input[type=file] {
 }
 
 .my__image .time {
-  right: 110%;
+  right: 100%;
+  padding-right: 25px;
 }
 
 .reactions {
@@ -891,7 +894,7 @@ input[type=file] {
   font-size: 0.8rem;
   background: #3f5266;
   color: #d1d1d1;
-  border-radius: 15px 15px 15px 0px;
+  border-radius: 15px 15px 15px 5px;
   z-index: 1;
 }
 
@@ -910,7 +913,7 @@ input[type=file] {
 }
 
 #messages .my-reply-message {
-  border-radius: 15px 15px 0px 15px;
+  border-radius: 15px 15px 5px 15px;
   position: relative;
 }
 
@@ -922,11 +925,13 @@ input[type=file] {
 }
 
 #messages .my__message .time {
-  right: 120%;
+  right: 100%;
+  padding-right: 25px;
 }
 
 #messages .message .time {
-  left: 120%;
+  left: 100%;
+  padding-left: 25px;
 }
 
 #messages .message .reactions {
