--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -62,6 +62,8 @@
     const maxuser = "<%=maxuser%>";
     const myid = "<%=myid%>";
     
+    window.location.hash = "chat";
+    window.location.hash = "poketab";
     window.location.hash = "inbox";
     console.log(window.location.hash);
     setTimeout(function () {
