--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -25,7 +25,7 @@
                 </div>
                 <div class="create-chat">
                     <fieldset class="line">
-                        <legend class="h1">Or</legend>
+                        <legend class="h1">No key?</legend>
                         <a id="create" href="/create">Create chat</a>
                     </fieldset>
                 </div>
