--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -37,24 +37,23 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-  <link rel="preload" as="image" type="image/png" href="/images/icons8-place-marker.gif">
   <link rel="preload" as="image" type="image/png" href="/images/a.png">
   <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.min.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="/images/avatars/pikachu.png">
   <script async src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
 
-  <script defer src="/socket.io/socket.io.js"></script>
+  <!-- script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.min.js"></script>
   <script defer src="/js/libs/mustache.min.js"></script>
-  <script defer src="/js/src/main.js"></script>
+  <script defer src="/js/src/main.js"></script -->
 
-  <!--script defer src="/js/dist/bundle.js" type="module"></script-->
+  <script defer src="/js/dist/bundle.js" type="module"></script>
   <script>
     const myname = "<%=myname%>";
     const mykey = "<%=mykey%>";
