--- a/public/views/offline.ejs
+++ b/public/views/offline.ejs
@@ -14,6 +14,14 @@
     </div>
     <a href="/">Retry</a>
     <style>
+	@font-face {
+	    font-family: 'comforter';
+	    src: url("/fonts/comforter.woff2");
+	}
+	@font-face {
+	    font-family: 'comic';
+	    src: url("/fonts/comic-webfont.woff2");
+	}
         body{
             background: #111d2a;
             color: #e1eeff;
@@ -24,6 +32,7 @@
             height: 100vh;
             width: 100vw;
             overflow: hidden;
+	    font-family: comforter;
         }
         a{
             color: #fff;
@@ -31,6 +40,7 @@
             background: #0575e6;
             padding: 10px 20px;
             border-radius: 10px;
+	    font-family: comic;
         }
     </style>
 </body>
