--- a/public/views/offline.html
+++ b/public/views/offline.html
@@ -15,12 +15,8 @@
     <a href="/">Retry</a>
     <style>
 	@font-face {
-	    font-family: 'comforter';
-	    src: url("/fonts/comforter.woff2");
-	}
-	@font-face {
 	    font-family: 'comic';
-	    src: url("/fonts/comic-webfont.woff2");
+	    src: url("../fonts/comic-webfont.woff2");
 	}
         body{
             background: #111d2a;
@@ -32,7 +28,7 @@
             height: 100vh;
             width: 100vw;
             overflow: hidden;
-	    font-family: comforter;
+	        font-family: comic;
         }
         a{
             color: #fff;
@@ -40,7 +36,6 @@
             background: #0575e6;
             padding: 10px 20px;
             border-radius: 10px;
-	    font-family: comic;
         }
     </style>
 </body>
