--- a/public/css/login.css
+++ b/public/css/login.css
@@ -284,7 +284,7 @@ input[type="radio"]:checked + label img {
 }
 
 .copy-key {
-  border: none !important;
+  border: 2px dashed !important;
   outline: none !important;
   background: var(--background-light) !important;
   text-align: center !important;
