--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -215,7 +215,7 @@ input[type="radio"] {
 }
 
 .copy-key{
-  border: none !important;
+  border: 2px dashed !important;
   outline: none !important;
   background: var(--background-light) !important;
   text-align: center !important;
