--- a/public/views/create.ejs
+++ b/public/views/create.ejs
@@ -10,16 +10,16 @@
             <div class="form-1" style="display: block;">
                 <div class="form-field">
                     <div class="h3">Create Chat <img src="/images/pokeball.png" alt="" srcset=""></div>
-                    <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
                     <label for="key" id="key-label">Tap to Copy <i class="fa-regular fa-clone"></i></label>
+                    <div class="log" id="key-error"></div>
                     <input type="text" name="key" class="copy-key" id="key" value="<%=key_%> " readonly>
                 </div>
                 <div class="form-field">
                     <input type="button" value="Next" id="next">
                 </div>
-                            <div class="create-chat">
+            <div class="create-chat">
                 <fieldset class="line">
                     <legend class="h1">Or</legend>
                     <a id="create" href="/login">Join chat</a>
@@ -29,9 +29,11 @@
             <div class="form-2" style="display: none;">
                 <div class="form-field">
                     <label for="name"  id="name-label">Choose username</label>
-                    <input type="text" name="name" id="name" maxlength="20" placeholder="Username">
+                    <div class="log"id="username-error"></div>
+                    <input type="text" name="name" id="name" placeholder="Username">
                 </div>
                 <div class="form-field">
+                    <div class="log" id="avatar-error"></div>
                     <%- include("layout/avatars") %> 
                 </div>
                 <div class="form-field">
