--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -49,8 +49,8 @@
 
   <!--script defer src="/socket.io/socket.io.js"></!--script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-  <script defer src="/js/libs/moment.min.js"></script>
-  <script defer src="/js/libs/mustache.min.js"></script>
+  <script defer src="/js/libs/moment.js"></script>
+  <script defer src="/js/libs/mustache.js"></script>
   <script-- defer src="/js/src/main.js"></script-->
 
   <script defer src="/js/dist/bundle.js" type="module"></script>
