--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -180,5 +180,8 @@
       </template>
     </div>
   </div>
+  <div id="wait">
+    <div class="text">Logging out <i class="fa-solid fa-circle-notch fa-spin"></i></div>
+  </div>
 </body>
 </html>
