--- a/public/css/login.css
+++ b/public/css/login.css
@@ -154,9 +154,9 @@ body {
   width: 100%;
 }
 
-.form-field > label {
+.form-field label {
   display: block;
-  padding: 5px;
+  min-height: 25px;
 }
 
 .form-field input,
@@ -170,7 +170,6 @@ body {
 }
 
 .source-code {
-  position: relative;
   text-align: center;
   width: 100%;
   padding: 10px;
@@ -201,7 +200,6 @@ input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-
 .avatars {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -212,7 +210,7 @@ input[type='number']::-webkit-inner-spin-button {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  height: 135px;
+  height: 138px;
   width: 200px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -292,6 +290,26 @@ input[type="radio"]:checked + label img {
 
 .copy-key:hover {
   cursor: pointer;
+}
+
+#wait {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000000cb;
 }
 
 .log {
