--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -127,7 +127,6 @@ body {
 }
 
 .source-code{
-  position: relative;
   text-align: center;
   width: 100%;
   padding: 10px;
@@ -223,6 +222,18 @@ input[type="radio"] {
   }
 }
 
+#wait{
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000000cb;
+}
 
 .log{
   font-size: 0.7rem;
