--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -280,6 +280,20 @@ input[type=file] {
   }
 }
 
+#wait{
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #111d2a;
+  z-index: 100;
+  color: var(--secondary);
+}
 
 .sent{
   font-size: 0.6rem !important;
