--- a/public/views/layout/header.ejs
+++ b/public/views/layout/header.ejs
@@ -44,6 +44,10 @@
 <link rel="preload" as="stylesheet" type="text/css" href="/css/login.min.css">
 <link rel="stylesheet" href="/css/login.min.css">
 <script async src="/js/libs/fontawesome.js"></script>
+<script defer src="/js/libs/jquery-3.1.0.min.js"></script>
+<script defer src="/socket.io/socket.io.js"></script>
+<script defer src="/js/src/common.js"></script>
+
 <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 <link rel="icon" href="/images/avatars/pikachu.png">
 <title><%= title %>  | PokeTab Messanger</title>
