--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -101,7 +101,7 @@
             <div class="message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{{repIcon}}}{{from}}</h3></div>
             <div class="reply-message replyMessage" {{attr}}="{{replyMessageStyle}}" data-repid="{{repId}}">{{reply}}</div>
             <div class="main-message">
-              <p class="textMessage object" {{attr}}="{{radius}}">{{{text}}}</p>
+              <p class="textMessage object" {{attr}}="{{radius}}" data-sent="true">{{{text}}}</p>
               <div class="reactor" style="display: none;"><ul></ul></div>
               <ul class="reactions"></ul>
               <span class='time'>{{createdAt}}</span>
@@ -155,7 +155,7 @@
               <div class="image__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{from}}</h3></div>
             <% } %> 
             <div class="main-image">
-              <div class="imageMessage object" {{attr}}="{{radius}}">{{{image}}}</div>
+              <div class="imageMessage object" {{attr}}="{{radius}}" data-sent="true">{{{image}}}</div>
               <div class="reactor" style="display: none;"><ul></ul></div>
               <ul class="reactions"></ul>
               <span class='time'>{{createdAt}}</span>
