--- a/public/css/login.scss
+++ b/public/css/login.scss
@@ -232,7 +232,8 @@ input[type="radio"] {
   position: fixed;
   top: 0;
   left: 0;
-  background: #000000cb;
+  background: #00000080;
+  backdrop-filter: blur(5px);
 }
 
 .log{
