--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -39,6 +39,7 @@
   <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
   <link rel="preload" as="image" type="image/png" href="/images/a.png">
   <link rel="preload" as="font" type="font/woff2" href="/fonts/comic-webfont.woff2">
+  <link rel="preload" as="script" type="text/javascript" href="/js/libs/fontawesome.js">
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
