--- a/public/views/layout/header.ejs
+++ b/public/views/layout/header.ejs
@@ -46,7 +46,7 @@
 <script async src="/js/libs/fontawesome.js"></script>
 <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
 <script defer src="/socket.io/socket.io.js"></script>
-<script defer src="/js/src/common.js"></script>
+<script defer src="/js/src/common.min.js"></script>
 
 <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
 <link rel="icon" href="/images/avatars/pikachu.png">
