--- a/public/views/layout/main-header.ejs
+++ b/public/views/layout/main-header.ejs
@@ -48,13 +48,13 @@
   <link rel="icon" href="/images/avatars/pikachu.png">
   <script async src="/js/libs/fontawesome.js" crossorigin="anonymous"></script>
 
-  <!--script defer src="/socket.io/socket.io.js"></!--script>
-  <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/js/libs/jqueryClone.min.js"></script>
   <script defer src="/js/libs/moment.js"></script>
   <script defer src="/js/libs/mustache.js"></script>
-  <script-- defer src="/js/src/main.js"></script-->
+  <script defer src="/js/src/main.js"></script>
 
-  <script defer src="/js/dist/bundle.js" type="module"></script>
+  <!--script defer src="/js/dist/bundle.js" type="module"></!script-->
 
   <script>
     const myname = "<%=myname%>";
