--- a/public/views/layout/header.ejs
+++ b/public/views/layout/header.ejs
@@ -44,7 +44,7 @@
 <link rel="preload" as="stylesheet" type="text/css" href="/css/login.min.css">
 <link rel="stylesheet" href="/css/login.min.css">
 <script async src="/js/libs/fontawesome.js"></script>
-<script defer src="/js/libs/jquery-3.1.0.min.js"></script>
+<script defer src="/js/libs/jqueryClone.js"></script>
 <script defer src="/socket.io/socket.io.js"></script>
 <script defer src="/js/src/common.min.js"></script>
 
