--- a/public/views/chat.ejs
+++ b/public/views/chat.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div class="preloader" style="display: flex;  flex-direction: row; gap: 5px; align-items: center;  justify-content: center;  width: 100%;  height: 100%;  position: fixed;  top: 0;  left: 0;  background: #111d2a;  z-index: 100;  color: #2585fd;">
+  <div id="preloader" style="display: flex;  flex-direction: row; gap: 5px; align-items: center;  justify-content: center;  width: 100%;  height: 100%;  position: fixed;  top: 0;  left: 0;  background: #111d2a;  z-index: 100;  color: #2585fd;">
     <div class="text">Logging in</div>
     <i class="fa-solid fa-circle-notch fa-spin"></i>
   </div>
